# ganeti-instance-image

./: .gitignore  .rubocop.yml  AUTHORS  Berksfile  ChangeLog  Makefile.am  NEWS  README  README.markdown  Vagrantfile  cloud_init.rb  common.sh.in  configure.ac  create  defaults  export  ganeti-instance-image.spec  ganeti_api_version  import  parameters.list  rename  verify
.github/workflows/: ci.yml
debian/: changelog  control  copyright  dirs  docs  example  links  rules  watch
devel/: upload
example/config/kickstart/: centos-5.5-x86_64-ganeti.cfg
example/config/preseed/: debian-5.04-x86_64-ganeti.cfg  ubuntu-10.04-x86_64-ganeti.cfg
example/config/scripts/: standard.sh
example/hooks/: cloud-init  cron_randomize  grub  interfaces  overlays  root_ssh_key  ssh  zz_ddns
example/instance-debootstrap.d/: grub
example/instance-image.d/: grub  interfaces  ssh
example/pre-hooks/: resize_root_partition
test/cookbooks/instance-image-devel/: metadata.rb
test/cookbooks/instance-image-devel/recipes/: default.rb  install.rb  variants.rb
test/scripts/: cloudinit.sh
tools/: ganeti-image  ganeti-image.in  make-dump  make-dump.in  make-image.in  make-qemu-img  make-qemu-img.in  make-tgz-image  make-tgz-image.in  mount-disks  mount-disks.in  umount-disks  umount-disks.in
